# ai-rpg

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  action.py  actor.py  actor_action.py  actor_agent.py  actor_attack.py  actor_broadcast.py  actor_enter_stage.py  base_game.py  batch_agent_app_launcher.py  batch_run_agents.py  batch_run_agents2.py  broadcast_action_system.py  builder.py  calculate_damage.py  chat_server_settings.json  chat_servers.pid  components.py  console.py  create_actor_attack_action.py  create_game_funcs.py  create_rpg_game_funcs.py  data_save_system.py  dead_action_system.py  destroy_system.py  dev_config.py  director.py  director_component.py  director_event.py  director_system.py  ecosystem.config.js  environment-windows.yml  environment.yml  excel_test.xlsx  extended_context.py  extract_md_content.py  (+96 more)
actor_plan_and_action/: actor_action.py  actor_plan.py
agent/: agent_plan.py  agent_plan_response.py  agent_request_handler.py  agent_response_handler.py  agent_system.py  agent_task.py  chat_request_handler.py  lang_serve_agent.py  lang_serve_agent_system.py  lang_serve_system.py  remote_runnable_connector.py  remote_runnable_handler.py  task_request_handler.py
agents/: map_agent.py  melodious_forest_valley_agent.py  npc_agent.py  numerical_output_agent.py  old_hunter_agent.py  old_hunters_cabin_agent.py  old_hunters_dog_agent.py  player_agent.py  rat_agent.py  record.md  scene_agent.py  shadow_dragon_agent.py  story_agent.py  task_agent.py  thief_agent.py  underground_city_agent.py  world_agent.py  world_watcher_agent.py
auxiliary/: actor_action.py  actor_agent.py  actor_plan_and_action.py  agent_connect_system.py  base_data.py  builder.py  builders.py  chaos_engineering_system.py  cn_builtin_prompt.py  code_name_component_system.py  components.py  console.py  data_base_system.py  dialogue_rule.py  director_component.py  director_event.py  error_json_handle.py  extended_context.py  extract_md_content.py  file_def.py  file_system.py  file_system_helper.py  format_of_complex_intertactive_props.py  format_of_complex_stage_entry_and_exit_conditions.py  game_builders.py  gm_input.py  gm_input_command.py  kick_off_memory_system.py  lang_serve_agent_system.py  memory_system.py  multi_players_game.py  player_command.py  player_input.py  player_input_command.py  player_proxy.py  print_in_color.py  prompt_maker.py  target_and_message_format_handle.py  world_data_builder.py
budding_world/: World1.json  actor_editor.py  budding_world.xlsx  chaos_budding_world.py  common.md  configuration.py  excel_data.py  game_editor.py  gen_budding_world.py  gen_config.py  gen_excel_data.py  gen_funcs.py  gen_game.py  gen_npc_template.md  gen_utils.py  gpt_agent_template.py  npc_editor.py  old_hunter.md  old_hunters_cabin.md  old_hunters_dog.md  stage_editor.py  stage_sys_prompt_template.md  thief.md  utils.py  world_editor.py  world_system_editor.py
build_game/: actor_builder.py  data_base_system.py  data_model.py  game_builder.py  game_builder_data_schema.py  game_builders.py  stage_builder.py  world_system_builder.py
builtin_prompt/: cn_builtin_prompt.py  cn_constant_prompt.py
chaos_engineering/: chaos_engineering_system.py  empty_engineering_system.py
chat_services/: azure_chat_openai_gpt_4o_graph.py  batch_start_langserve.py  chat_api.py  chat_azure_openai_gpt_4o_graph.py  chat_request_handler.py  chat_server.py  chat_server_config.py  chat_server_fastapi.py  chat_server_settings.py  chat_system.py  service_config.py
components/: action_components.py  actions.py  actions2.py  actions_v_0_0_1.py  components.py  components_v_0_0_1.py  registry.py
doc/: 001.md  002.md  003.md  250305.md  demo提示词草稿.md  my_doc.md  test.md  法师设计草稿1.md  法师设计草稿2.md  角色.怪物.兽人-库洛斯.md  角色.怪物.哥布林-拉格.md  角色.战士.卡恩.md  角色.法师.奥露娜.md  龙战士设计.md
docs/: AWS bedrock.md  README.md  llm-fine-tuning-guide.md
ecs_systems/: action_components.py  actor_planning_system.py  agents_connect_system.py  agents_kick_off_system.py  attack_action_system.py  begin_system.py  behavior_action_system.py  broadcast_action_system.py  check_before_go_to_action_system.py  check_status_action_system.py  cn_builtin_prompt.py  cn_constant_prompt.py  components.py  compress_chat_history_system.py  connect_agent_system.py  dead_action_system.py  destroy_system.py  end_system.py  feedback_action_system.py  give_prop_action_system.py  go_to_action_system.py  handle_player_input_system.py  kick_off_system.py  mind_voice_action_system.py  perception_action_system.py  portal_step_action_system.py  post_action_system.py  post_conversation_action_system.py  post_fight_system.py  post_planning_system.py  pre_action_system.py  pre_conversation_action_system.py  pre_go_to_action_system.py  pre_planning_system.py  save_system.py  search_action_system.py  search_prop_action_system.py  simple_rpg_pre_fight_system.py  skill_action_system.py  skill_feedback_action_system.py  (+18 more)
entitas/: __init__.py  collector.py  context.py  entity.py  entity_index.py  group.py  matcher.py  processors.py  utils.py
extended_systems/: archive_file.py  base_file.py  chat_request_handler.py  code_name_component_system.py  combat_system.py  dump_file.py  dungeon_system.py  engagement_system.py  file_system.py  file_system_helper.py  file_system_util.py  files_def.py  guid_generator.py  kick_off_memory_system.py  kick_off_message_system.py  lang_serve_system.py  prop_file.py  prop_file2.py  query_component_system.py  tcg_game_battle_manager.py  tcg_prop_file_manage_system.py
file_system/: file_system.py  files_def.py  helper.py
format_string/: complex_actor_name.py  complex_prop_name.py  complex_skill_command.py  ints_string.py  json_format.py  json_plan_response_handler.py  target_message.py  tcg_complex_name.py  terminal_input.py
game/: base_game.py  options.py  rpg_entitas_context.py  rpg_entitas_processors.py  rpg_game.py  rpg_game_config.py  rpg_game_context.py  rpg_game_processors.py  rpg_game_resource.py  rpg_game_utils.py  startup_options.py  (+17 more)
packaging/: build_macos.sh  game_client.spec  launcher.sh  pyproject.toml
(+1596 files in other folders)
