[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agents-game-framework"
version = "0.1.0"
description = "A multi-agent game framework based on ECS architecture for TCG games"
authors = [{name = "Yang Hang", email = "yanghang@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
keywords = ["multi-agent", "game", "framework", "ECS", "TCG", "AI"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
urls = {homepage = "https://github.com/your-username/multi-agents-game-framework"}
dependencies = [
    # Core web framework and HTTP
    "fastapi==0.110.0",
    "starlette==0.36.3",
    "uvicorn==0.27.1",
    "httpx==0.27.0",
    "httpcore==1.0.4",
    "h11==0.14.0",
    "anyio==4.3.0",
    "click==8.1.7",
    
    # HTTP client libraries
    "aiohttp==3.9.3",
    "aiosignal==1.3.1",
    "requests==2.31.0",
    "urllib3==2.2.1",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "idna==3.6",
    
    # LangChain ecosystem
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.70,<1.0.0",
    "langchain-openai>=0.3.28,<1.0.0",
    "langchain-text-splitters>=0.3.9",
    "langgraph>=0.6.2",
    "langgraph-checkpoint>=2.1.0,<3.0.0",
    "langgraph-sdk>=0.2.0",
    "langserve>=0.3.1",
    "langsmith>=0.4.9",
    
    # OpenAI and AI tools
    "openai>=1.98.0",
    "tiktoken==0.8.0",
    "faiss-cpu==1.8.0",
    
    # Data processing
    "numpy==1.26.4",
    "pandas==2.2.3",
    "openpyxl==3.1.2",
    
    # Database and vector database
    "sqlalchemy==2.0.27",
    "pgvector==0.4.1",
    
    # Validation and serialization
    "pydantic==2.10.3",
    "pydantic-core==2.27.1",
    "marshmallow==3.21.0",
    "dataclasses-json==0.6.4",
    
    # JSON and data formats
    "orjson==3.10.12",
    "jsonschema==4.22.0",
    "jsonschema-specifications==2023.12.1",
    "jsonpointer==2.4",
    "msgpack==1.1.0",
    
    # Template and markup
    "jinja2==3.1.4",
    "markupsafe==2.1.5",
    
    # Async and concurrency
    "multidict==6.0.5",
    "frozenlist==1.4.1",
    "yarl==1.9.4",
    "attrs==23.2.0",
    
    # Streaming and events
    "sse-starlette==2.0.0",
    
    # Utilities
    "loguru==0.7.2",
    "python-dotenv==1.0.1",
    "tenacity==8.2.3",
    "overrides==7.7.0",
    "tqdm==4.66.2",
    "packaging==24.1",
    "platformdirs==4.2.2",
    "referencing==0.35.1",
    "rpds-py==0.18.1",
    "six==1.16.0",
    
    # Configuration and validation  
    "pyyaml==6.0.1",
    "annotated-types==0.6.0",
    "typing-extensions==4.12.2",
    
    # File processing
    "et-xmlfile==1.1.0",
    
    # Performance and compression
    "xxhash==3.5.0",
    "zstandard==0.23.0",
    "jiter==0.8.2",
    
    # Additional pip packages (from conda environment)
    "ormsgpack==1.10.0",
    "pytz==2024.1", 
    "tzdata==2024.1",
    "regex==2023.12.25",
    "langchain-deepseek==0.1.4",
    "langgraph-prebuilt==0.6.2",
    "cfgv==3.4.0",
    
    # Note: The following packages are installed via conda for better performance:
    # bcrypt, passlib, python-jose, redis, psycopg2, pymongo, psutil, 
    # python-dateutil, distro, pathspec, typing-inspect, requests-toolbelt,
    # jsonpatch, httpx-sse, sniffio, pydantic-settings
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "mypy==1.16.0",
    "black==25.1.0",
    "mypy-extensions==1.0.0",
    # Type stubs and development types
    "pandas-stubs==2.2.1.240316",
    "types-cffi==1.17.0.20250523",
    "types-jsonschema==4.22.0.20240610",
    "types-pyopenssl==24.1.0.20240722",
    "types-pytz==2024.1.0.20240203",
    "types-redis==4.6.0.20241004",
    "types-requests==2.32.0.20240907",
    "types-setuptools==80.9.0.20250529",
]

# 移除不正确的脚本配置，因为脚本在项目根目录的 scripts/ 文件夹中
# [project.scripts]
# run-terminal-game = "multi_agents_game.scripts.run_terminal_tcg_game:main"
# run-game-server = "multi_agents_game.scripts.run_tcg_game_server:main"
# run-chat-server = "multi_agents_game.scripts.run_a_chat_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
# 排除文件和目录
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "gen_runtimes",
    "gen_worlds",
    "logs",
]

# 每行最大字符数
line-length = 88

# Python版本
target-version = "py312"

[tool.ruff.lint]
# 启用的规则：
# F401 - 未使用的导入
# F402 - 重定义导入但未使用
# F403 - star import但未使用
# F811 - 重复导入
# E401 - 多个导入在一行
# I001 - import排序
select = ["F401", "F402", "F403", "F811", "E401", "I001"]

# 忽略的规则
ignore = []

# 允许修复的规则
fixable = ["F401", "F402", "F403", "F811", "E401", "I001"]

[tool.ruff.lint.isort]
# import排序配置
known-first-party = ["multi_agents_game"]
