[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-rpg"
version = "0.1.0"
description = "A multi-agent game framework based on ECS architecture for TCG games"
authors = [{name = "Yang Hang", email = "yanghang@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
keywords = ["multi-agent", "game", "framework", "ECS", "TCG", "AI"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
urls = {homepage = "https://github.com/yanghanggit/ai-rpg", repository = "https://github.com/yanghanggit/ai-rpg.git"}
dependencies = [
    # Core web framework
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "httpx>=0.28.1",
    "click>=8.1.7",
    # HTTP client libraries
    "aiohttp>=3.9.3",
    "requests>=2.32.2",
    # Text-to-image generation
    "replicate>=1.0.7",
    # AI and embeddings
    "sentence-transformers>=4.1.0",
    # Vector database
    "chromadb>=1.0.15",
    # Database
    "sqlalchemy>=2.0.27",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.10",
    # Validation and serialization
    "pydantic>=2.11.7",
    # Authentication
    "passlib>=1.7.4",
    "python-jose>=3.5.0",
    # Utilities
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "overrides>=7.7.0",
    # TUI client
    "textual>=8.1.1",
    "textual-serve>=1.1.3",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    
    # Type checking
    "mypy==1.13.0",
    "mypy-extensions>=1.0.0",
    
    # Code formatting and linting
    "black>=25.1.0",
    "ruff>=0.5.0",
    "pre-commit>=4.2.0",
    
    # Type stubs
    "pandas-stubs>=2.2.1.240316",
    "types-cffi>=1.17.0.20250523",
    "types-jsonschema>=4.22.0.20240610",
    "types-passlib>=1.7.7.20250602",
    "types-psycopg2>=2.9.21.20250915",
    "types-psutil>=7.0.0.20250822",
    "types-pyasn1>=0.6.0.20250914",
    "types-pyopenssl>=24.1.0.20240722",
    "types-python-jose>=3.5.0.20250531",
    "types-pytz>=2024.1.0.20240203",
    "types-pyyaml>=6.0.12.12",
    "types-requests>=2.32.0.20240907",
    "types-setuptools>=80.9.0.20250529",
    
    # Additional dev tools
    "psutil>=7.1.0",
]

# 脚本位于项目根目录的 scripts/ 文件夹中
# [project.scripts] 暂时不使用

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".mypy_cache", ".nox", ".pants.d", ".pytype", ".ruff_cache",
    ".svn", ".tox", ".venv", "__pypackages__", "_build", "buck-out",
    "build", "dist", "node_modules", "venv", "gen_runtimes", "gen_worlds", "logs",
]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# 启用规则：未使用导入、重复导入、import排序等
# F401: 未使用的导入 - 现已全局启用，不再忽略
# F402: 模块级导入被局部导入覆盖  
# F403: 星号导入（from module import *）
# F811: 重复定义
# E401: 多个导入在一行
# I001: import排序
select = ["F401", "F402", "F403", "F811", "E401", "I001"]
ignore = []
fixable = ["F401", "F402", "F403", "F811", "E401", "I001"]

[tool.ruff.lint.isort]
# import排序配置
known-first-party = ["ai_rpg"]


