[project]
name = "ai-rpg-client"
version = "0.1.0"
description = "AI RPG TUI Game Client - standalone packaging environment"
requires-python = ">=3.12"
dependencies = [
    "textual>=8.1.1",
    "click>=8.1.7",
    "httpx>=0.28.1",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "overrides>=7.0.0",
    "pyinstaller>=6.0.0",
]
